Integrate Google Breakpad crash reporter. Linux only for now.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ qrc_*
 *.o
 *.swp
 *.pyc
+*.a
 debian/*.debhelper
 debian/files
 debian/*.log
@@ -17,6 +18,7 @@ debian/*.substvars
 debian/*/
 /deploy/qt-*.tar.gz
 /deploy/Qt-*
+/symbols
 
 # ignore ctags
 /tags
