URL needs to be phantomjs.org.
https://github.com/ariya/phantomjs/issues/10627

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: true
 githubEdit: https://github.com/ariya/phantomjs/edit/gh-pages/
 
 # When pushing to GitHub
-url: http://ariya.github.io/phantomjs
+url: http://phantomjs.org
 
 # When Developing Locally
 # url: http://localhost:4000
