Travis CI: Ensure packages are cached for faster setup.
https://github.com/ariya/phantomjs/issues/11880

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 compiler:
   - gcc
+cache: apt
 before_install:
   - apt-get -y install build-essential chrpath git-core libssl-dev libfontconfig1-dev
 script: ./build.s --confirm
