Travis CI: Packages installation needs a priviliged access.
https://github.com/ariya/phantomjs/issues/11880

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
   - gcc
 cache: apt
 before_script:
-  - apt-get -y install build-essential chrpath git-core libssl-dev libfontconfig1-dev
+  - sudo apt-get -y install build-essential chrpath git-core libssl-dev libfontconfig1-dev
 script: ./build.sh --confirm
