Travis CI: Ensure that the build script executable.
https://github.com/ariya/phantomjs/issues/11880

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ compiler:
 cache: apt
 before_script:
   - sudo apt-get -y install build-essential chrpath git-core libssl-dev libfontconfig1-dev
+  - chmod +x ./build.sh
 script: ./build.sh --confirm
