--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	branch = phantomjs
 [submodule "qtwebkit"]
 	path = src/qt/qtwebkit
-	url = https://github.com/Vitallium/qtwebkit.git
-	branch = phantomjs
+	url = https://github.com/ricokahler/qtwebkit.git
+	branch = switch-qwebframe-print-to-qpagedpaintdevice
 [submodule "3rdparty-win"]
 	path = src/qt/3rdparty
 	url = https://github.com/Vitallium/phantomjs-3rdparty-win.git
