--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "PhantomJS",
-  "version": "2.1.3",
   "dependencies": {
-    "mongoose": "cesanta/mongoose",
-    "linenoise": "antirez/linenoise"
+  "mongoose": {
+  "version": "6.10"
+    }
   }
+},
+{
+  "linenoise":
+  {
+    "version": "1.0"
+  }
+}
