--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "dependencies": {
-  "mongoose": {
-  "version": "6.10"
+  "name": "PhantomJS",
+  "description": "Scriptable Headless WebKit http://phantomjs.org",
+  "version": "2.1.3",
+  "contributors": [
+    {
+      "name": "pixiuPL",
+      "email": "devs4p@protonmail.com",
+      "web": "www.gobb.pl"
     }
-  }
-},
-{
-  "linenoise":
-  {
-    "version": "1.0"
+  ],
+  "dependencies": {
+    "https://github.com/cesanta/mongoose": "6.10"
   }
 }
