--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "PhantomJS",
+  "description": "Scriptable Headless WebKit http://phantomjs.org",
   "version": "2.1.3",
+  "contributors": [
+    {
+      "name": "pixiuPL",
+      "email": "devs4p@protonmail.com",
+      "web": "www.gobb.pl"
+    }
+  ],
   "dependencies": {
-    "mongoose": "cesanta/mongoose",
-    "linenoise": "antirez/linenoise"
+    "https://github.com/cesanta/mongoose": "6.10",
+    "https://github.com/qt/qtwebkit/tree/v5.212.0-alpha2": "v5.212-alpha2"
   }
 }
