new ignoring rules for GIT

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ qrc_*
 /debian/*.log
 /debian/*.substvars
 /debian/*/
-/deploy/qt-*.tar.gz
-/deploy/Qt-*
 /symbols
 /src/qt/qtc-debugging-helper
 /src/phantomjs_plugin_import.cpp
@@ -59,6 +57,6 @@ qrc_*
 [Rr]elease/
 bin/
 *.class
-build/
 .gradle/
 /.vs
+.vscode
